fix gap at progrss bars

--- a/output.css
+++ b/output.css
@@ -122,8 +122,14 @@
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
+}
+.flex-row {
+  flex-direction: row;
 }
 .items-center {
   align-items: center;
@@ -189,6 +195,9 @@
 .opacity-80 {
   opacity: 80%;
 }
+.opacity-85 {
+  opacity: 85%;
+}
 .opacity-90 {
   opacity: 90%;
 }
@@ -200,9 +209,6 @@
 }
 .opacity-800 {
   opacity: 800%;
-}
-.opacity-85 {
-  opacity: 85%;
 }
 .invert {
   --tw-invert: invert(100%);
